Hero-text alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -512,7 +512,7 @@ hr {
 
         #footerimg{
           position: relative;
-          left: 5%;
+          left: 3%;
         }
 
         
